microservices/booking/booking-k8s-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      name: booking-service-app
  template:
    metadata:
      labels:
        name: booking-service-app
    spec:
      containers:
      - name: application
        image: rendize/booking-service
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: account-configmap-volume
          mountPath: /etc/config
          readOnly: true
        - name: booking-secret-volume
          mountPath: "/etc/mafatih"
          readOnly: true
        - name: booking-firebase-cred-volume
          mountPath: "/etc/mafatih/booking-firebase"
          readOnly: true
      volumes:
        - name: account-configmap-volume
          configMap:
            name: account-configmap
        - name: booking-secret-volume
          secret:
            secretName: booking-secret
        - name: booking-firebase-cred-volume
          secret:
            secretName: fcm-secret-key

---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  type: ClusterIP
  selector:
    name: booking-service-app
  ports:
  - port: 80
    targetPort: 3000
