microservices/booking/booking-ingress-minion.yml
# Must be applied to the "booking" namespace
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: booking-ingress-minion
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: api.rendize.com
    http:
      paths:
      - path: /booking/.*
        backend:
          serviceName: booking-service
          servicePort: 80
